[package]
name = "mpris-player"
version = "0.6.1"
description = "A library for creating MPRIS2 media players over D-Bus"
authors = ["Felix Häcker <haeckerfelix@gnome.org>"]
license = "GPL-3.0+"
documentation = "https://docs.rs/mpris-player/"
homepage = "https://gitlab.gnome.org/World/Rust/mpris-player"
repository = "https://gitlab.gnome.org/World/Rust/mpris-player"
keywords = ["mpris", "dbus"]
edition = "2021"

[dependencies]
dbus = "0.6.5"
